# Azure-Kinect-Sensor-SDK

./: CMakeSettings.json
include/k4ainternal/: sick_visionary.h
src/: CMakeLists.txt
src/sdk/: CMakeLists.txt  visionary.c
src/sick_visionary/: CMakeLists.txt  sick_visionary.c  sick_visionary.cpp
tools/k4aviewer/: CMakeLists.txt
